--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "Node.js MySQL封装优化",
   "main": "src/index.js",
+  "engines": {
+    "node": ">= 7.3.0"
+  },
   "scripts": {
   },
   "repository": {
