--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dwing/mysql",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node.js MySQL封装优化",
   "main": "src/index.js",
   "engines": {
@@ -25,10 +25,11 @@
   },
   "homepage": "https://github.com/airdwing/node-dwing-mysql#readme",
   "devDependencies": {
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3"
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1"
   },
   "dependencies": {
     "@dwing/common": "*",
