--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dwing/mysql",
-  "version": "1.0.3",
+  "version": "2.0.0-beta",
   "description": "Node.js MySQL封装优化",
   "main": "src/index.js",
   "engines": {
@@ -34,7 +34,6 @@
   "dependencies": {
     "@dwing/common": "*",
     "debug": "*",
-    "generic-pool": "*",
     "mysql": "*"
   }
 }
