--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dwing/mysql",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Node.js MySQL封装优化",
   "main": "src/index.js",
   "engines": {
@@ -25,11 +25,8 @@
   },
   "homepage": "https://github.com/airdwing/node-dwing-mysql#readme",
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1"
+    "eslint": "^4.3.0",
+    "eslint-config-dwing": "^1.1.0"
   },
   "dependencies": {
     "@dwing/common": "*",
