--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dwing/mysql",
-  "version": "3.0.2",
+  "name": "@xibang/mysql",
+  "version": "1.0.0",
   "description": "Node.js MySQL封装优化",
   "main": "src/index.js",
   "engines": {
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/airdwing/node-dwing-mysql.git"
+    "url": "https://github.com/xibang/node-xibang-mysql.git"
   },
   "keywords": [
     "api",
@@ -44,20 +44,20 @@
     "db"
   ],
   "author": "Willin Wang",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/airdwing/node-dwing-mysql/issues"
+    "url": "https://github.com/xibang/node-xibang-mysql/issues"
   },
-  "homepage": "https://github.com/airdwing/node-dwing-mysql#readme",
+  "homepage": "https://github.com/xibang/node-xibang-mysql#readme",
   "devDependencies": {
     "ava": "^0.22.0",
     "codecov": "^2.3.0",
     "eslint": "^4.7.0",
-    "eslint-config-dwing": "^1.1.0",
+    "eslint-config-willin": "*",
     "nyc": "^11.2.1"
   },
   "dependencies": {
-    "@dwing/common": "*",
+    "@xibang/node-common": "*",
     "debug": "*",
     "mysql": "*"
   }
