--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xibang/mysql",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node.js MySQL封装优化",
   "main": "src/index.js",
   "engines": {
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/xibang/node-xibang-mysql.git"
+    "url": "https://github.com/xibang/node-mysql.git"
   },
   "keywords": [
     "api",
@@ -46,9 +46,9 @@
   "author": "Willin Wang",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/xibang/node-xibang-mysql/issues"
+    "url": "https://github.com/xibang/node-mysql/issues"
   },
-  "homepage": "https://github.com/xibang/node-xibang-mysql#readme",
+  "homepage": "https://github.com/xibang/node-mysql#readme",
   "devDependencies": {
     "ava": "^0.22.0",
     "codecov": "^2.3.0",
